Added first templates

--- a/tnmjproject/templates/traffic/index.html
+++ b/tnmjproject/templates/traffic/index.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Traffic Not-My-Jam</title>
-	</head>
-	<body>
-		<div>
-			Something One!
-		</div>
-		<div>
-			Something Two!
-		</div>
-	</body>
-</html>
+{% extends 'traffic/base.html' %}
+
+{% block title_block %}
+	TRAFFIC NJM...
+{% endblock %}
