--- a/tnmjproject/templates/traffic/index.html
+++ b/tnmjproject/templates/traffic/index.html
@@ -1,5 +1,9 @@
 {% extends 'traffic/base.html' %}
 
-{% block title_block %}
-	TRAFFIC NJM...
+{% block left_body_block %}
+	<strong>LEFT BLOCK</strong>
+{% endblock %}
+
+{% block left_body_block %}
+	<strong>RIGHT BLOCK</strong>
 {% endblock %}
