--- a/templates/traffic/postTesting.html
+++ b/templates/traffic/postTesting.html
@@ -1,4 +1,3 @@
-{% for post in posts %}
 {{ post.title }} <br/>
 {{ post.photo }} <br/>
 {{ post.description }} <br/>
@@ -6,4 +5,11 @@
 {{ post.dateAndTime }} <br/>
 {{ post.category }} <br/>
 {{ post.slug }} <br/>
+<br/> <br/>
+
+{% if comments %}
+{% for comment in comments %} 
+{{ comment.date }} <br/>
+{{ comment.content }} <br/>
 {% endfor %}
+{% endif %}
