added initial html for post page

--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -23,6 +23,10 @@
 			{% block right_body_block %}
 			{% endblock %}
 		</div>
+		<div>
+			{% block bottombar %}
+			{% endblock %}
+		</div>
 		<div id="navbar">
 			<a href="{% url 'traffic:index'">HOME</a>
 			<a href="{% url 'traffic:about'">ABOUT</a>
