post page accepts and displays post info

--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -11,7 +11,7 @@
 		<div id="header">
 			<strong> TRAFFIC NOT-MY-JAM </strong> <br/>			
 		</div>
-		<div>
+		<div id="topbar">
 			{% block topbar %}
 			{% endblock %}
 		</div>
@@ -23,7 +23,7 @@
 			{% block right_body_block %}
 			{% endblock %}
 		</div>
-		<div>
+		<div id="bottombar">
 			{% block bottombar %}
 			{% endblock %}
 		</div>
