--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,8 +9,8 @@ a:hover{
 }
 
 body{
-	background-color: #2055E0;
-	
+	background-color: #444444;
+	color: white;
 	font-family: "Roboto", "Verdana", "Arial";
 }
 
@@ -31,11 +31,27 @@ body{
 	font-size: 1em;
 	font-style: italic;
 }
+#topbar{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left:5%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+		
+	color: white;
+	background-color: #2055E0;
+	border: 5px solid white;
+	
+	text-align: left;
+	font-size: 1.2em;
+}
 #l-block{
 	padding-top: 10px;
+	padding-bottom: 10px;
 	padding-left:5%;
 	float: left;
 	width: 43%;
+	height: 250px;
 	
 	color: white;
 	background-color: #2055E0;
@@ -45,15 +61,30 @@ body{
 }
 #r-block{
 	padding-top: 10px;
+	padding-bottom: 10px;
 	padding-right:5%;
 	float: right;
 	width: 43%;
+	height: 250px;
 	
 	color: white;
 	background-color: #2055E0;
 	border: 5px solid white;
 	
 	text-align: right;
+}
+#bottombar{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left:5%;
+	margin-top: 300px;
+	margin-bottom: 10px;
+	
+	color: white;
+	background-color: #2055E0;
+	border: 5px solid white;
+	
+	text-align: left;
 }
 #navbar{
 	position:fixed;
@@ -64,7 +95,7 @@ body{
 	width: 100%;
 	
 	background-color: white;
-	color: white;
+	color: black;
 	border-top: 5px solid #f02020;
 	
 	text-align: center;
@@ -82,5 +113,10 @@ body{
 	border: 5px solid #f02020;
 	
 	text-align: right;
+	font-size: 1.1em;
+}
+#postnav{
+	float: right;
+	padding-right: 5%;
 	font-size: 1.1em;
 }
