--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,7 @@ a:hover{
 }
 
 body{
-	background-color: #444444;
+	background-color: #555555;
 	color: white;
 	font-family: "Roboto", "Verdana", "Arial";
 }
@@ -18,9 +18,6 @@ body{
 	padding-top: 10px;
 	padding-bottom: 10px;
 	
-	color: black;
-	background-color: white;
-	border: 5px solid #f02020;
 	
 	text-align: center;
 	font-size: 1.5em;
@@ -32,71 +29,43 @@ body{
 	font-style: italic;
 }
 #topbar{
-	padding-top: 10px;
-	padding-bottom: 10px;
 	padding-left:5%;
 	margin-top: 10px;
 	margin-bottom: 10px;
-		
-	color: white;
-	background-color: #2055E0;
-	border: 5px solid white;
 	
 	text-align: left;
 	font-size: 1.2em;
 }
 #l-block{
-	padding-top: 10px;
-	padding-bottom: 10px;
 	padding-left:5%;
 	float: left;
 	width: 43%;
 	height: 250px;
 	
-	color: white;
-	background-color: #2055E0;
-	border: 5px solid white;
-	
 	text-align: left;
 }
 #r-block{
-	padding-top: 10px;
-	padding-bottom: 10px;
 	padding-right:5%;
 	float: right;
 	width: 43%;
 	height: 250px;
 	
-	color: white;
-	background-color: #2055E0;
-	border: 5px solid white;
-	
 	text-align: right;
 }
 #bottombar{
-	padding-top: 10px;
-	padding-bottom: 10px;
 	padding-left:5%;
 	margin-top: 300px;
 	margin-bottom: 10px;
-	
-	color: white;
-	background-color: #2055E0;
-	border: 5px solid white;
 	
 	text-align: left;
 }
 #navbar{
 	position:fixed;
-	bottom: 0px;
-	left: 0px;
+	bottom: 10px;
+	left: 10%;
 	padding-bottom: 10px;
 	padding-top: 10px;
-	width: 100%;
-	
-	background-color: white;
-	color: black;
-	border-top: 5px solid #f02020;
+	width: 80%;
 	
 	text-align: center;
 	font-size: 1.1em;
@@ -109,9 +78,6 @@ body{
 	padding-bottom: 5px;
 	padding-right: 5%;
 	
-	background-color: white;
-	border: 5px solid #f02020;
-	
 	text-align: right;
 	font-size: 1.1em;
 }
@@ -119,4 +85,17 @@ body{
 	float: right;
 	padding-right: 5%;
 	font-size: 1.1em;
+}
+.contentbox{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	
+	color: white;
+	background-color: #2344a0;
+	border: 5px solid white;	
+}
+.contextbox{
+	color: black;
+	background-color: white;
+	border: 5px solid #bf0f0f;
 }
