--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -1,7 +1,7 @@
 {% extends 'traffic/base.html' %}
 
 {% block topbar %}
-<div id="home-navbar">
+<div id="home-navbar" class="contextbox">
 	<a href="{% url 'traffic:index'">HOME</a>
 	<a href="{% url 'traffic:about'">ABOUT</a>
 </div>
