fixed incorrect bars appearing on about pages

--- a/templates/traffic/about.html
+++ b/templates/traffic/about.html
@@ -9,6 +9,8 @@
 {% endblock %}
 
 {% block bottombar%}
+<div id="bottombar-lone" class="contentbox">
 	{% block info %}
 	{% endblock %}
+</div>
 {% endblock %}
