--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -15,15 +15,15 @@
 			{% block topbar %}
 			{% endblock %}
 		</div>
-		<div id="l-block" class="contentbox">
+		<div>
 			{% block left_body_block %}
 			{% endblock %}
 		</div>
-		<div id="r-block" class="contentbox">
+		<div>
 			{% block right_body_block %}
 			{% endblock %}
 		</div>
-		<div id="bottombar" class="contentbox">
+		<div>
 			{% block bottombar %}
 			{% endblock %}
 		</div>
