--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -8,9 +8,13 @@
 {% endblock %}
 
 {% block left_body_block %}
-	<strong>-- POSTS FEED --</strong>
+	<div id="l-block" class="contentbox">
+		<strong>-- POSTS FEED --</strong>
+	</div>
 {% endblock %}
 
 {% block right_body_block %}
-	<strong>-- MAP --</strong>
+	<div id="r-block" class="contentbox">
+		<strong>-- MAP --</strong>
+	</div>
 {% endblock %}
