--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -36,6 +36,18 @@
 		--COMMENTS--
 		<div>
 			--MAKE COMMENTS--
+            <form id="addComments" method="post" action= "post/<slug:postSlug>/">
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                        {{ hidden }}
+                {% endfor %}
+                {% for field in form.visible_fields %}
+                        {{ field.errors }}
+                        {{ field.help_text }}
+                        {{ field }}
+                {% endfor %}
+            <input type="submit" name="submit" value="Write a Comment" />
+            </form>
 		</div>
 		{% if comments %}
 		{% for comment in comments %} 
