--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -1,5 +1,6 @@
 {% extends 'traffic/base.html' %}
 
+
 {% block topbar %}
 <div id="topbar" class="contentbox">
 {{ post.title }}
@@ -32,29 +33,23 @@
 			--RATING--
 		</div>
 	</div>
+	
+	
 	<div>
+	</div>
 		--COMMENTS--
-		<div>
-			--MAKE COMMENTS--
-            <form id="addComments" method="post" action= "post/<slug:postSlug>/">
-                {% csrf_token %}
-                {% for hidden in form.hidden_fields %}
-                        {{ hidden }}
-                {% endfor %}
-                {% for field in form.visible_fields %}
-                        {{ field.errors }}
-                        {{ field.help_text }}
-                        {{ field }}
-                {% endfor %}
-            <input type="submit" name="submit" value="Write a Comment" />
-            </form>
-		</div>
 		{% if comments %}
 		{% for comment in comments %} 
-		{{ comment.date }} <br/>
-		{{ comment.content }} <br/>
+    		{{ comment.date }} <br/>
+    		{{ comment.content }} <br/>
 		{% endfor %}
 		{% endif %}
+	<div>
+		--MAKE COMMENTS--
+		{% include 'traffic/writeComment.html' %}
+	
+	</div>
+
 	</div>
 </div>
 {% endblock %}
