--- a/templates/traffic/writePosts.html
+++ b/templates/traffic/writePosts.html
@@ -18,7 +18,7 @@
             {% for field in form.visible_fields %}
                     {{ field.errors }}
                     {{ field.help_text }}
-                    {{ field }}
+                    {{ field }}<br/>
             {% endfor %}
             <input type="submit" name="submit" value="Write Post" />
         </form>
