--- a/templates/traffic/categoriesTesting.html
+++ b/templates/traffic/categoriesTesting.html
@@ -1,9 +1,11 @@
 {% if categories %}
 
-	{% for category, slug in categories %}
+	{% for category in categories %}
 		
-		{{ category.category }} <br/>
-		<a href="{{ slug.categorySlug }}/"> Bad practice hard coded link </a>
+		{{ category.name }} <br/>
+		<a href="{{ category.slug }}/"> Bad practice hard coded link </a> <br/>
+
+		__________________________ <br/>
 		
 	{% endfor %}
 	
