--- a/templates/traffic/writePosts.html
+++ b/templates/traffic/writePosts.html
@@ -10,7 +10,7 @@
 {% block left_body_block %}
     <div id="l-block" class="contentbox">
 		<strong>-- WRITE A POST--</strong>
-        <form id="addPosts" method="post" action= "/addpost/">
+        <form id="addPosts" method="post" action= "/addposts/">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                     {{ hidden }}
