--- a/templates/traffic/searchResultTesting.html
+++ b/templates/traffic/searchResultTesting.html
@@ -3,12 +3,18 @@
 Posts: <br/>
 {% if posts %}
 	{% for post in posts %}
-		{{ post.title }} <br/>
+		<a href="/post/{{ post.slug }}/"> {{ post.title }} </a><br/>
 	{% endfor %}
 {% else %}
 	<em> No results. </em> <br/>
 {% endif %}
 
-Categories: <br/>
 Comments: <br/>
-etc?: <br/>
+{% if comments %}
+	{% for comment in comments %}
+		<a href="/post/{{ comment.post.slug }}/"> {{ comment.post.title }} </a> : <em> {{ comment.content }} </em> <br/>
+	{% endfor %}
+
+{% else %}
+	<em> No results. </em> <br/>
+{% endif %}
