--- a/templates/traffic/writeComment.html
+++ b/templates/traffic/writeComment.html
@@ -1,4 +1,4 @@
-<form id="addComments" method="post" action= "{% url 'traffic:addComments' pk=post.pk %}"> 
+<form id="addComments" method="post" action= "post/<slug:postSlug>/addcomment/" %}"> 
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
             {{ hidden }}
