fixed urls/links for index and all about pages

--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -2,9 +2,8 @@
 
 {% block topbar %}
 <div id="home-navbar" class="contextbox">
-	<a href="{% url 'traffic:index'">HOME</a>
-	<a href="{% url 'traffic:about'">ABOUT</a>
-	<a href="{% url 'traffic:addPosts'">WRITE POST</a> <!--just for testing will remove-->
+	<a href="{% url 'traffic:index' %}">HOME</a>
+	<a href="{% url 'traffic:about' %}">ABOUT</a>
 </div>
 {% endblock %}
 
