--- a/templates/traffic/about.html
+++ b/templates/traffic/about.html
@@ -2,9 +2,9 @@
 
 {% block topbar %}
 <div id="home-navbar" class="contextbox">
-	<a href="{% url '/about/information'">INFORMATION</a>
-	<a href="{% url '/about/faq'">FAQ</a>
-	<a href="{% url '/about/rules'">RULES</a>
+	<a href="{% url 'traffic:information' %}">INFORMATION</a>
+	<a href="{% url 'traffic:faq' %}">FAQ</a>
+	<a href="{% url 'traffic:rules' %}">RULES</a>
 </div>
 {% endblock %}
 
