--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -28,8 +28,8 @@
 			{% endblock %}
 		</div>
 		<div id="navbar" class="contextbox">
-			<a href="{% url 'traffic:index'">HOME</a>
-			<a href="{% url 'traffic:about'">ABOUT</a>
+			<a href="{% url 'traffic:index'%}">HOME</a>
+			<a href="{% url 'traffic:about'%}">ABOUT</a>
 		</div>
 	</body>
 </html>
