--- a/static/css/base.css
+++ b/static/css/base.css
@@ -61,7 +61,7 @@ body{
 }
 #bottombar-lone{
 	position: relative;
-	top: -200px;
+	top: -290px;
 	padding-left:5%;
 	margin-top: 300px;
 	margin-bottom: 10px;
@@ -106,7 +106,15 @@ body{
 	border: 5px solid white;	
 }
 .contextbox{
+    padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+	
 	color: black;
 	background-color: white;
 	border: 5px solid #bf0f0f;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	margin-bottom: 10px;
 }
