--- a/templates/traffic/results.html
+++ b/templates/traffic/results.html
@@ -1,6 +1,7 @@
 {% extends 'traffic/base.html' %}
 
 {% block topbar %}
+<div class="contentbox" id="topbar">
 	<form id="searchForm" method="post" action="/search/">
 		{% csrf_token %}
 		{{ form.search.errors }}
@@ -8,21 +9,35 @@
 		{{ form.search }} 
 		<input type="submit" name="submit" value="Search" />
 	</form>
+</div>
+<div class="contextbox">
+    Search Results: <strong>{{ query }}</strong>
+</div>
 {% endblock %}
 
-{% block bottombar %}
-	<strong> {{ query }} </strong> <br/>
+{% block left_body_block %}
+<div class="contentbox" id="l-block">
+    <strong>Posts</strong> <br/><br/>
+    {% if posts %}
+    	{% for post in posts %}
+    		<a href="/post/{{ post.slug }}/"> {{ post.title }} </a> <br/><br/>
+    	{% endfor %}
+    {% else %}
+    	<em> No results. </em> <br/>
+    {% endif %}
+</div>
+{% endblock %}
 
-	Posts: <br/>
-	{% if posts %}
-		{% for post in posts %}
-			{{ post.title }} <br/>
-		{% endfor %}
-	{% else %}
-		<em> No results. </em> <br/>
-	{% endif %}
-
-	Categories: <br/>
-	Comments: <br/>
-	etc?: <br/>
+{% block right_body_block %}
+<div class="contentbox" id="r-block">
+    <strong>Comments</strong> <br/><br/>
+    {% if comments %}
+    	{% for comment in comments %}
+    		<a href="/post/{{ comment.post.slug }}/"> {{ comment.post.title }} </a> : <em> {{ comment.content }} </em> <br/><br/>
+    	{% endfor %}
+    
+    {% else %}
+    	<em> No results. </em> <br/>
+    {% endif %}
+</div>
 {% endblock %}
