--- a/templates/traffic/indexTesting.html
+++ b/templates/traffic/indexTesting.html
@@ -1,5 +1,6 @@
 {% for post in posts %}
 {{ post.title }} <br/>
+{{ post.user.username }} <br/>
 {{ post.photo }} <br/>
 {{ post.description }} <br/>
 {{ post.location }} <br/>
