--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -9,7 +9,13 @@
 
 {% block left_body_block %}
 	<div id="l-block" class="contentbox">
-		<strong>-- POSTS FEED --</strong>
+		{% for post in posts %}
+		<div class="postbox">
+			<div id="posttitle"><strong><a href="/post/{{ post.slug }}/">{{ post.title }}</a></strong> </div>
+			<div id="postinfo"> A {{ post.category }} incident posted by {{ post.user.username }} at {{ post.dateAndTime }} in {{ post.location }} </div>
+			<div id="postimg"> <img src="{{ post.photo }}" alt="Post Image Unavailable"> </div>
+		</div>
+		{% endfor %}
 	</div>
 {% endblock %}
 
