Completed the back end maps implementation

--- a/templates/traffic/indexTesting.html
+++ b/templates/traffic/indexTesting.html
@@ -35,17 +35,21 @@
 
                 {% for post in posts %}
 
-                {
+                    {% if post.location %}
 
-                    var location = new Microsoft.Maps.Location({{ post.location }})
-                    var pin = new Microsoft.Maps.Pushpin( location, {
-                        title: '{{ post.title }}',
-                        subTitle: '{{ post.description }} ',
-                        });
+                    {
 
-                    map.entities.push(pin);
+                        var location = new Microsoft.Maps.Location({{ post.location }})
+                        var pin = new Microsoft.Maps.Pushpin( location, {
+                            title: '{{ post.title }}',
+                            subTitle: '{{ post.description }} ',
+                            });
 
-                }
+                        map.entities.push(pin);
+
+                    }
+
+                    {% endif %}
 
                 {% endfor %}
 
