--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,6 +37,7 @@ body{
 	font-size: 1.2em;
 }
 #l-block{
+	margin-left:2%;
 	padding-left:5%;
 	padding-bottom: 25px;
 	float: left;
@@ -45,10 +46,11 @@ body{
 	text-align: left;
 }
 #r-block{
-	padding-right:5%;
+	margin-right:2%;
+	padding:10px;
 	float: right;
 	width: 43%;
-	height: 250px;
+	height: 400px;
 	
 	text-align: right;
 }
