--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -21,6 +21,39 @@
 
 {% block right_body_block %}
 	<div id="r-block" class="contentbox">
-		<strong>-- MAP --</strong>
+		<div id="map">
+			<script type="text/javascript">
+				function GetMap(){
+					var map = new Microsoft.Maps.Map('#map', { 
+							credentials: 'AuJ09npEnmthbBSxKu6teNImwt-6ZIn83affPp-nyUTAfXypqFl12jmF_SFV0IO6',
+							center: new Microsoft.Maps.Location(55.8554403, -4.3024976),
+							mapTypeId: Microsoft.Maps.MapTypeId.aerial,
+							zoom: 10
+						});
+		
+						{% for post in posts %}
+		
+							{% if post.location %}
+		
+							{
+		
+								var location = new Microsoft.Maps.Location({{ post.location }})
+								var pin = new Microsoft.Maps.Pushpin( location, {
+									title: '{{ post.title }}',
+									subTitle: '{{ post.description }} ',
+									});
+		
+								map.entities.push(pin);
+		
+							}
+		
+							{% endif %}
+		
+						{% endfor %}
+		
+				}
+			</script>
+			<script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
+		</div>
 	</div>
 {% endblock %}
