--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -4,6 +4,7 @@
 <div id="home-navbar" class="contextbox">
 	<a href="{% url 'traffic:index' %}">HOME</a>
 	<a href="{% url 'traffic:about' %}">ABOUT</a>
+	<a href="{% url 'traffic:addposts' %}">POST</a>
 </div>
 {% endblock %}
 
