--- a/templates/traffic/writePosts.html
+++ b/templates/traffic/writePosts.html
@@ -2,14 +2,15 @@
 
 {% block topbar %}
 <div id="home-navbar" class="contextbox">
-	<a href="{% url 'traffic:index'">HOME</a>
-	<a href="{% url 'traffic:about'">ABOUT</a>
+	<a href="{% url 'traffic:index' %}">HOME</a>
+        <a href="{% url 'traffic:about' %}">ABOUT</a>
+        <a href="{% url 'traffic:addposts' %}">POST</a>
 </div>
 {% endblock %}
 
 {% block left_body_block %}
     <div id="l-block" class="contentbox">
-		<strong>-- WRITE A POST--</strong>
+        <strong id="posttitle"> New Post </strong><br/><br/>
         <form id="addPosts" method="post" action= "/addposts/">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
@@ -17,8 +18,8 @@
             {% endfor %}
             {% for field in form.visible_fields %}
                     {{ field.errors }}
-                    {{ field.help_text }}
-                    {{ field }}<br/>
+                    <div id="fieldhelp">{{ field.help_text }}</div>
+                    <div id="field">{{ field }}</div><br/><br/><br/>
             {% endfor %}
             <input type="submit" name="submit" value="Write Post" />
         </form>
