account page html

--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -33,6 +33,7 @@
 			<a href="{% url 'traffic:addposts'%}">POST</a>
 			<a href="{% url 'traffic:login'%}">LOGIN</a>
 			<a href="{% url 'traffic:register'%}">REGISTER</a>
+			<a href="{% url 'traffic:account'%}">ACCOUNT</a>
 		</div>
 	</body>
 </html>
