--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -79,7 +79,7 @@
 		{% endif %}
    
 	<div>
-    	{% if user.is_authenticated %}.
+    	{% if user.is_authenticated %}
     		--MAKE COMMENTS--<br/>
     		{% if new_comment %}
         		Comment Added!
