--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -1,4 +1,5 @@
 {% extends 'traffic/base.html' %}
+{% load static %}
 
 {% block topbar %}
 <div id="topbar" class="contentbox">
@@ -12,7 +13,7 @@
 
 {% block left_body_block %}
 	<div id="l-block" class="contentbox">
-		<img src="{{ post.photo }}" alt="Post Image Unavailable">
+		<img src="{{ MEDIA_URL }}{{ post.photo }}" alt="Post Image Unavailable">
 	</div>
 {% endblock %}
 
