--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,9 @@
+img{
+	object-fit: scale-down;
+	width:100%;
+	height:100%;
+}
+
 a{
 	color: black;
 	
@@ -39,9 +45,10 @@ body{
 #l-block{
 	margin-left:2%;
 	padding-left:5%;
+	padding-right:2%;
 	padding-bottom: 25px;
 	float: left;
-	width: 43%;
+	width: 40%;
 	
 	text-align: left;
 }
@@ -146,6 +153,7 @@ div.contentbox a:hover{
 #postimg{
 	float: right;
 	width:29%;
+	height:10%;
 	border: 1px solid white;
 }
 #postinfo{
