--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -34,6 +34,7 @@
 			<a href="{% url 'traffic:login'%}">LOGIN</a>
 			<a href="{% url 'traffic:register'%}">REGISTER</a>
 			<a href="{% url 'traffic:account'%}">ACCOUNT</a>
+			<a href="{% url 'traffic:logout'%}">LOGOUT</a>
 		</div>
 	</body>
 </html>
