--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -30,11 +30,14 @@
 		<div id="navbar" class="contextbox">
 			<a href="{% url 'traffic:index'%}">HOME</a>
 			<a href="{% url 'traffic:about'%}">ABOUT</a>
-			<a href="{% url 'traffic:addposts'%}">POST</a>
-			<a href="{% url 'traffic:login'%}">LOGIN</a>
-			<a href="{% url 'traffic:register'%}">REGISTER</a>
-			<a href="{% url 'traffic:account'%}">ACCOUNT</a>
-			<a href="{% url 'traffic:logout'%}">LOGOUT</a>
+			{% if user.is_authenticated %}
+				<a href="{% url 'traffic:addposts'%}">POST</a>
+				<a href="{% url 'traffic:account'%}">ACCOUNT</a>
+				<a href="{% url 'traffic:logout'%}">LOGOUT</a>
+			{% else %}
+				<a href="{% url 'traffic:login'%}">LOGIN</a>
+				<a href="{% url 'traffic:register'%}">REGISTER</a>
+			{% endif %}
 		</div>
 	</body>
 </html>
