--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -2,9 +2,16 @@
 
 {% block topbar %}
 <div id="home-navbar" class="contextbox">
-	<a href="{% url 'traffic:index' %}">HOME</a>
-	<a href="{% url 'traffic:about' %}">ABOUT</a>
-	<a href="{% url 'traffic:addposts' %}">POST</a>
+	<a href="{% url 'traffic:index'%}">HOME</a>
+			<a href="{% url 'traffic:about'%}">ABOUT</a>
+			{% if user.is_authenticated %}
+				<a href="{% url 'traffic:addposts'%}">POST</a>
+				<a href="{% url 'traffic:account'%}">ACCOUNT</a>
+				<a href="{% url 'traffic:logout'%}">LOGOUT</a>
+			{% else %}
+				<a href="{% url 'traffic:login'%}">LOGIN</a>
+				<a href="{% url 'traffic:register'%}">REGISTER</a>
+			{% endif %}
 </div>
 {% endblock %}
 
