green reaction button up and running

--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -39,5 +39,8 @@
 				<a href="{% url 'traffic:register'%}">REGISTER</a>
 			{% endif %}
 		</div>
+		<script src="{% static "js/jquery-3.3.1.min.js" %}" crossorigin="anonymous"></script>
+		<script src="{% static "js/traffic-jquery.js" %}" crossorigin="anonymous"></script>
+		<script src="{% static "js/traffic-ajax.js" %}" crossorigin="anonymous"></script>
 	</body>
 </html>
