--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -5,6 +5,7 @@
 	<head lang="en">	
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="{% static "css/base.css" %}">
+		<link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
 		<title>TRAFFIC NOT-MY-JAM</title>
 	</head>
 	<body>
