--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -18,8 +18,8 @@
 {% endblock %}
 
 {% block right_body_block %}
-	<div id="r-block" class="contentbox">
-		<div id="map">
+	<div id="r-block">
+		<div id="map" class="mapbox">
 			<script type="text/javascript">
 				function GetMap(){
 					var map = new Microsoft.Maps.Map('#map', { 
